--- a/myportfolio/templates/base.html
+++ b/myportfolio/templates/base.html
@@ -1,15 +1,16 @@
-{% load boostrap4 %}
-{% load static %}
+{% load bootstrap4 %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    {% block style %}
-    {% boostrap_css %}
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    {% block styles %}
+    {% bootstrap_css %}
     {% endblock %}
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <title>MY PORTFOLIO || Isaac Kiptoo Kilimo</title>
 </head>
 <body>
