--- a/myportfolio/templates/pages/index.html
+++ b/myportfolio/templates/pages/index.html
@@ -1,4 +1,45 @@
 {% extends 'base.html' %}
 {% block content %}
-<h2>This is my portfolio</h2>
+<div class="container">
+    <!-- Looping through news   -->
+    {% for editor in editors %}
+    <div class="row">
+      <!-- displaying News articles -->
+      <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 shadow mb-3">
+        <div class="row">
+          <img src="{{editor.prof_image.url}}" class="img-responsive" alt="" style="height: 80%;width: 40%;">
+      </div>
+        <h2 class="text-center" id="h2"> {{editor.firstname }} </h2>
+        <p class="text-center" id="p"> {{ project.description }} </p>
+        <span class="mt-2" id="small">Editor: {{ project.editor }}</span>
+        <span class="float-right" id="right">Date of Publish: {{ project.date_posted }}</span>
+        
+      </div>
+      <!--Display news Article images  -->
+      
+    </div>
+    {% empty %}
+    <div class="row">
+      <h2 class="text-center noproject">There No projects here</h2>
+    </div>
+    {% endfor %}
+    {% for project in projects %}
+    <div class="row">
+      <!-- displaying News articles -->
+      <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 shadow mb-3">
+        <div class="row">
+          <img src="{{project.prof_image.url}}" class="img-responsive" alt="" style="height: 80%;width: 40%;">
+      </div>
+        <h2 class="text-center" id="h2"> {{project.title }} </h2>
+        <p class="text-center" id="p"> {{ project.description }} </p>
+        <span class="mt-2" id="small">Editor: {{ project.editor }}</span>
+        <span class="float-right" id="right">Date of Publish: {{ project.date_posted }}</span>
+        
+      </div>
+      <!--Display news Article images  -->
+      
+    </div>
+   
+    {% endfor %}
+  </div>
 {% endblock %}
