--- a/static/css/style.css
+++ b/static/css/style.css
@@ -74,3 +74,7 @@ body{
     padding-top: calc(var(--navbar-height) + 10px);
     /* background-color: red; */
   }
+  .hero{
+    height: 100vh;
+    width: 100%;
+  }
